# homey-gateway

./: .editorconfig  CMakeLists.txt  README.md
includes/: Device.h
src/: Device.cpp  Device.hpp  main.cpp
